# real-estate-unit-mix-extraction

./: .gitignore  LICENSE  README.md  SECURITY.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  label_schema.json  sample_inputs.jsonl  sample_labels.jsonl
docs/: data_labeling_guide.md  error_analysis.md  evaluation_plan.md  modeling_approach.md  output_schema.md  problem_definition.md  training_process.md  whats_omitted_and_why.md
tests/: test_smoke.py
unitmix_eval/: evaluate.py  metrics.py
unitmix_extractor/: __init__.py  extractor.py  ner_stub.py  postprocess.py  preprocessing.py  rent_estimator_stub.py
