[project]
name = "real_estate_unit_mix_extraction"
version = "0.1.0"
description = "Showcase repository for extracting unit mix from listing text."
requires-python = ">=3.10"
dependencies = ["typer>=0.12.0"]

[project.scripts]
unitmix = "cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["unitmix_extractor*", "unitmix_eval*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
